Rename project from BCA to BACA and update references
Problem: The project name and CLI were inconsistently referenced as 'Background Coding Agent (BCA)'.
Solution: Renamed to 'Background Automated Coding Agent (BACA)' across all code, docs, scripts, and images. Updated binary, CLI commands, Kubernetes resources, and documentation to use 'baca'.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
+.DS_Store
 .envrc
 creds.yaml
 runner-image
-bca
-bca-release
-bca-release-*
+baca
+baca-release*
 dist/
 tmp/
-background-coding-agent
