Add --fork-org flag for fork organization override
Problem: Forks were always created in the authenticated user's account, limiting flexibility for team workflows and organization management.

Solution: Introduce --fork-org flag to allow specifying a GitHub organization or user for fork creation. Updated CLI, backend, and documentation. Embedded fork-setup and job-runner scripts now support FORK_ORG. Docs clarify fork collision protection and usage scenarios.

Key behaviors:
- Forks can be created in any org/user
- Error if repo exists but is not a fork
- Scripts embedded for single binary deployment

--- a/prompts/change-fix-linters.yaml
+++ b/prompts/change-fix-linters.yaml
@@ -1,6 +1,7 @@
 kind: Change
 apiVersion: v1
 spec:
+  # running golangci-lint needs lots of ram with large repos
   prompt: |
     Remove the exclusion rules from the golangci-lint configuration file in the repository.
     Run golangci-lint and fix any issues found in the codebase.
